# MyEarleyAlgo

./: README.md
Early/: CMakeLists.txt  README.md
Early/include/: Earley.h  Grammar.h  Reader.h
Early/manual/: Manual.cpp
Early/src/: Earley.cpp  Reader.cpp
Early/tests/: EarleyTesting.cpp  test1.txt  test2.txt  test3.txt
